apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        affected_vlan: "50"
      securityContext:
        runAsUser: 3105
        runAsGroup: 3100
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:12.0@sha256:baba630419915985442f315f08b0cf46d9f4c8a0cc4bd38e94a6d35751dd5ef5
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        - name: discovery
          containerPort: 7359
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: media-data
          mountPath: /media
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "1000m" 
      
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: cache
        emptyDir: {} # Cache can be ephemeral or a PVC depending on your preference
      - name: media-data
        persistentVolumeClaim:
          claimName: media-data-pvc # Reusing your existing media PVC
