apps/jellyfin/route.yaml
# apps/arr-stack/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: jellyfin-https     
  hostnames:
    - "jellyfin.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 7878
